objclass-dev: Install objclass-public.h using make install
Signed-off-by: Neha Ojha <nojha@redhat.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -575,6 +575,7 @@ install(FILES include/rados/librados.h
   include/memory.h
   include/page.h
   include/crc32c.h
+  objclass/objclass-public.h
   DESTINATION include/rados)
 install(TARGETS librados DESTINATION ${CMAKE_INSTALL_LIBDIR})
 
